Fix overflow

--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ main li {
     position: relative;
     --lines: rgb(255 255 255 / .15);
 
+    overflow: hidden;
     ul {
         list-style-type: '-   ';
     }
